--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,4 +18,5 @@
 	<string name="search_title">Search</string>
 	<string name="refresh_title">Refresh</string>
 	
+	<string name="tweet_error">Tweets no found!</string>
 </resources>
