NEW: Parallel task checkbox added listview header.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,4 +19,6 @@
 	<string name="refresh_title">Refresh</string>
 	
 	<string name="tweet_error">Tweets no found!</string>
+	
+	<string name="prallel_tasks">Parallel Tasks</string>
 </resources>
